# YMP-deluxe-edition

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  dump.rdb  hello.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  redis_client.py  test.db  token_storage.py
src/: RecipeManager.py  __init__.py  app.py  config.py  date_service.py  dependencies.py  extensions.py  helpers.py  jwt_utils.py  recipe_manager.py  recipe_resource.py  recipes.db  routes.py  run.py  shopping_list_service.py  token_storage.py  user_auth.py  user_plan_manager.py
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 16592c293992_initial_migration.py  75cfc3bed192_initial_migration.py  a71eab61f4e8_merge_heads.py  dbfcb77a996b_create_meal_type_enum.py
src/helpers/: date_range_generator.py  ingredient_parser.py  login_required_decorator.py
src/models/: recipes.py
src/resources/: __init__.py  auth_resource.py  index.py  plan_resource.py  pydantic_schemas.py  recipe_resource.py  schemas.py  shopping_list_resource.py
src/services/: __init__.py  password_validator.py  recipe_manager.py  shopping_list_service.py  user_auth.py  user_auth_manager.py  user_plan_manager.py
src/services/shopping_list_module/: __init__.py  date_range_generator.py  ingredient_parser.py  shopping_list_service.py
src/static/: styles.css
src/templates/: ListOfRecipes.html  chooseMeal.html  displayRecipe.html  index.html  layout.html  login.html  register.html  schedule.html
tests/: conftest.py  settings.py  test_app.py  test_auth.py  test_config.py  test_main.py  test_redis_blacklist.py  test_schemas.py  test_utils.py
tests/e2e/: test_login_route.py  test_logout_route.py
tests/fixtures/: users.py
tests/integration/: test_app.py  test_login_route.py  test_logout_route.py  test_meal_plan_get_route.py  test_meal_plan_post_route.py  test_recipe_delete_route.py  test_recipe_get_by_id_route.py  test_recipe_get_route.py  test_recipe_patch_route.py  test_recipe_post_route.py  test_recipe_routes.py  test_redis.py  test_registration.py  test_schedule_route.py  test_shopping_list_routes.py
tests/scripts/: run_nox.py  setup_test_env.py
tests/test_models/: base.py  models_db_test.py  test_recipes.py
tests/test_routes/: test_auth_routes.py  test_meal_plan_routes.py  test_recipe_routes.py  test_registration.py
tests/test_schemas/: test_recipe.py  test_register.py
tests/unit/: test_app_main.py  test_auth_resource.py  test_config.py  test_dependencies.py  test_extensions.py  test_jwt_utils.py  test_login_service.py  test_password_hash.py  test_plan_resource_unit.py  test_recipe_manager.py  test_recipe_resource.py  test_settings_config.py  test_token_blacklist.py  test_token_response.py  test_token_storage.py  test_user_auth_manager.py  test_user_plan_manager.py
tests/unit/test_schemas/: __init__.py  test_recipe.py  test_register.py  test_shopping_list.py  test_token.py  test_user_plan.py
tests/utils/: db_init.py
typings/cs50/: __init__.pyi  cs50.pyi  flask.pyi  sql.pyi
typings/flask_restful/: __init__.pyi  fields.pyi  reqparse.pyi
typings/flask_restful/utils/: __init__.pyi
