[project]
name = "moj-projekt"
version = "0.1.0"
description = "A comprehensive meal planning and shopping list application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "typing>=3.10.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.35",
    "greenlet>=3.1.1",
    "sqlparse>=0.5.1",
    "termcolor>=2.4.0",
    "typing-extensions>=4.12.2",
    "wheel>=0.44.0",
    "aniso8601",
    "cachelib",
    "certifi",
    "charset-normalizer",
    "click",
    "idna",
    "itsdangerous",
    "jinja2",
    "markupsafe",
    "msgspec",
    "mypy",
    "mypy-extensions",
    "packaging",
    "pyjwt==2.10.1",
    "pytz",
    "six",
    "urllib3",
    "types-cryptography==3.3.23.2",
    "types-jwt==0.1.3",
    "redis==5.2.1",
    "pydantic[email]>=2.9.2",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "aiosqlite==0.21.0",
    "asyncio>=3.4.3",
    "types-redis>=4.6.0.20241004",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "hiredis>=3.1.0",
    "ruff>=0.8.4",
    "asyncpg==0.30.0",
    "pytest-asyncio==0.23.5.post1",
    "pytest==8.3.4",
    "pluggy==1.5.0",
    "iniconfig==2.0.0",
    "httpx==0.28.1",
    "httpcore==1.0.7",
    "alembic==1.14.1",
    "mako==1.3.8",
    "coverage>=7.6.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.5.post1",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.12.0",
    "coverage>=7.4.1",
]

[tool.uv.sources]
moj-projekt = { workspace = true }

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "sqlmodel.*"
]
ignore_missing_imports = true

[tool.poetry.dependencies]
alembic = "^1.14.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
